# goml

./: .gitignore  .justfile  AGENTS.md  Cargo.toml  README.md  SPEC.md  index.html  specification.md  test_closures.src  test_multiple_lets.src  test_one_closure.src  test_parens.src  test_simple.src
crates/compiler/: Cargo.toml
crates/compiler/src/: anf.rs  artifact.rs  builtin.gom  builtins.rs  common.rs  compile_match.rs  config.rs  core.rs  derive.rs  env.rs  external.rs  fir.rs  go.rs  hir.rs  interface.rs  interpreter.rs  lambda_lift.rs  lib.rs  lift.rs  main.rs  mangle.rs  mono.rs  names.rs  namespace_imports.rs  package_imports.rs  package_names.rs  pipeline.rs  query.rs  registry.rs  rename.rs  stdlib.rs  tast.rs  ty_codec.rs  type_encoding.rs  typer.rs
crates/compiler/src/env/: builtins.rs
crates/compiler/src/go/: compile.rs  dce.rs  goast.rs  goty.rs  lib.rs  mangle.rs  mod.rs  runtime.rs  ty.rs
crates/compiler/src/hir/: hir.rs  ir.rs  lower.rs  mod.rs  symbol_table.rs
crates/compiler/src/pipeline/: builtin_inherent.rs  mod.rs  modules.rs  packages.rs  pipeline.rs  separate.rs
crates/compiler/src/pprint/: anf_pprint.rs  common_pprint.rs  core_pprint.rs  fir_pprint.rs  go_pprint.rs  hir_pprint.rs  lift_pprint.rs  mod.rs  mono_pprint.rs  tast_pprint.rs
crates/compiler/tests/: cli_commands_test.rs  cli_tests.rs  trait_impl_pipeline.rs
crates/goml/: Cargo.toml  build.rs
crates/goml/src/: main.rs
crates/goml/tests/: cli_commands_test.rs  cli_tests.rs
crates/lsp-server/: Cargo.toml
crates/lsp-server/src/: handlers.rs  lib.rs  main.rs  tests.rs
(+4539 files in other folders)
