[package]
name = "compiler"
version = "0.0.0"
edition.workspace = true

[dependencies]
parser.workspace = true
ast.workspace = true
cst.workspace = true
expect-test.workspace = true
pretty.workspace = true
im.workspace = true
ena.workspace = true
la-arena.workspace = true
anyhow.workspace = true
line-index.workspace = true
rowan.workspace = true
indexmap.workspace = true
diagnostics.workspace = true
text-size.workspace = true
tempfile.workspace = true

[dev-dependencies]
