[package]
name = "goml"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
compiler.workspace = true
parser.workspace = true
serde_json.workspace = true
tempfile.workspace = true
toml_edit.workspace = true

[dev-dependencies]
expect-test.workspace = true
serde.workspace = true
xshell.workspace = true
