[package]
name = "lsp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "goml-lsp"
path = "src/main.rs"

[dependencies]
compiler = { path = "../compiler" }
diagnostics = { path = "../diagnostics" }
parser = { path = "../parser" }

tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
line-index = "0.1.2"
text-size = "1.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
